--- a/templates/team.html
+++ b/templates/team.html
@@ -297,7 +297,7 @@
             <!-- Team Member 1 -->
             <div class="team-card">
                 <img src="{{ url_for('static', filename='img/Team pic/Abhinandan.jpg') }}" alt="Abhinandan">
-                <h3>Bhuvan</h3>
+                <h3>Abhinandan</h3>
                 
                 <p>2JH21CS002 - JCET</p>
                 <div class="social-links">
